Enable alerts for unprocessed messages in email-alert-service queue
Looking back over the 2018 data, the queues sizes are always below 3,
except when the service failed, and there was a sudden large build up.
I'm confident that these very low thresholds won't be too noisy, and
will usefully indicate when the service is up but failing to process
messages.

--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -114,6 +114,8 @@ govuk::apps::content_publisher::enabled: true
 govuk::apps::content_tagger::enable_procfile_worker: false
 govuk::apps::email_alert_api::enable_procfile_worker: false
 govuk::apps::email_alert_service::rabbitmq_hosts: ['localhost']
+govuk::apps::email_alert_service::rabbitmq::queue_size_critical_threshold: 25
+govuk::apps::email_alert_service::rabbitmq::queue_size_warning_threshold: 5
 govuk::apps::event_store::enabled: true
 govuk::apps::event_store::mongodb_servers: ['localhost']
 govuk::apps::hmrc_manuals_api::allow_unknown_hmrc_manual_slugs: true
