--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -471,6 +471,8 @@ govuk::apps::email_alert_service::enabled: true
 govuk::apps::email_alert_service::rabbitmq_hosts:
   - rabbitmq
 govuk::apps::email_alert_service::redis_host: "%{hiera('sidekiq_host')}"
+govuk::apps::email_alert_service::rabbitmq::queue_size_critical_threshold: 25
+govuk::apps::email_alert_service::rabbitmq::queue_size_warning_threshold: 5
 
 govuk::apps::finder_frontend::enabled: true
 govuk::apps::finder_frontend::nagios_memory_warning: 2000
