Add user Tom Byers

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -272,6 +272,7 @@ users::usernames:
   - thomasleese
   - tijmenbrommet
   - timblair
+  - tombyers
   - vanitabarrett
   - vitaliemogoreanu
   - williamfranklin
