--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -210,6 +210,7 @@ users::usernames:
   - thomasleese
   - tijmenbrommet
   - timblair
+  - tombyers
   - vanitabarrett
   - vitaliemogoreanu
   - williamfranklin
