Fix crawlers to crawl their own environment
Previously the crawlers for each environment were all crawling
www.gov.uk, which has recently (for some reason) generated rate limit
alerts, as the limit bypass tokens aren't shared between environments.

This changes the crawler config for staging (and similarly for AWS)
to crawl origin for each environment. We've chosen to crawl the origin
instead of the CDN in these environments because:

   * The Carenza machines map www -> www-origin anyway
   * The AWS mirror machines can't access the CDN
   * The load impact of the crawler isn't such an issue

Ideally we should crawl the CDN on all environments, using a common URL
structure (compare www.gov.uk vs www.staging.publishing...), but this
isn't essential, although we should still aim to do this for AWS.
Note that the crawler is disabled for integration (for some reason).

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -526,9 +526,8 @@ govuk::apps::govuk_crawler_worker::blacklist_paths:
 
 govuk::apps::govuk_crawler_worker::enabled: true
 govuk::apps::govuk_crawler_worker::root_urls:
-  - 'https://assets.digital.cabinet-office.gov.uk/'
-  - 'https://assets.publishing.service.gov.uk/'
-  - 'https://www.gov.uk/'
+  - "https://assets-origin.%{hiera('app_domain')}"
+  - "https://www-origin.%{hiera('app_domain')}"
 
 govuk::apps::imminence::mongodb_nodes:
   - 'mongo-1.backend'
@@ -925,7 +924,7 @@ govuk_containers::frontend::haproxy::wildcard_publishing_certificate: "%{hiera('
 govuk_containers::frontend::haproxy::wildcard_publishing_key: "%{hiera('wildcard_publishing_key')}"
 
 govuk_crawler::amqp_host: 'localhost'
-govuk_crawler::site_root: 'https://www.gov.uk'
+govuk_crawler::site_root: "https://www-origin.%{hiera('app_domain')}"
 
 govuk_docker::version: "17.09.0~ce-0~ubuntu"
 govuk_docker::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
