--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -865,7 +865,7 @@ govuk_containers::apps::router::envvars:
 
 govuk_crawler::alert_hostname: 'alert'
 govuk_crawler::amqp_host: 'localhost'
-govuk_crawler::site_root: 'https://www.gov.uk'
+govuk_crawler::site_root: "https://www-origin.%{hiera('app_domain')}"
 
 govuk_docker::version: "17.09.0~ce-0~ubuntu"
 govuk_docker::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
