--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -544,8 +544,8 @@ govuk::apps::govuk_crawler_worker::blacklist_paths:
 
 govuk::apps::govuk_crawler_worker::enabled: true
 govuk::apps::govuk_crawler_worker::root_urls:
-  - "https://assets-origin.%{hiera('app_domain')}"
-  - "https://www-origin.%{hiera('app_domain')}"
+  - "https://assets.%{hiera('app_domain')}"
+  - "https://www.%{hiera('app_domain')}"
 
 govuk::apps::imminence::mongodb_nodes:
   - 'mongo-1'
@@ -865,7 +865,7 @@ govuk_containers::apps::router::envvars:
 
 govuk_crawler::alert_hostname: 'alert'
 govuk_crawler::amqp_host: 'localhost'
-govuk_crawler::site_root: "https://www-origin.%{hiera('app_domain')}"
+govuk_crawler::site_root: "https://www.%{hiera('app_domain')}"
 
 govuk_docker::version: "17.09.0~ce-0~ubuntu"
 govuk_docker::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
