--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -250,3 +250,239 @@ govuk_datascrubber::ensure: 'latest'
 govuk_datascrubber::share_with:
   - '210287912431'     # AWS integration
 govuk_datascrubber::s3_export_prefix: 's3://govuk-production-database-backups/scrubbed'
+
+hosts::aws_production::app_domain: 'staging.publishing.service.gov.uk'
+hosts::aws_production::ip_api_lb: '10.2.4.254'
+hosts::aws_production::ip_backend_lb: '10.2.3.254'
+hosts::aws_production::ip_bouncer: '37.26.91.5'
+hosts::aws_production::ip_draft_api_lb: '10.2.4.253'
+hosts::aws_production::ip_frontend_lb: '10.2.2.254'
+hosts::aws_production::licensify_hosts:
+  licensify.staging.publishing.service.gov.uk:
+    ip: '37.26.91.8'
+  licensify-admin.staging.publishing.service.gov.uk:
+    ip: '37.26.91.8'
+
+hosts::aws_production::api::hosts:
+  api-1:
+    ip: '10.2.4.16'
+  api-2:
+    ip: '10.2.4.17'
+  api-lb-1:
+    ip: '10.2.4.101'
+  api-lb-2:
+    ip: '10.2.4.102'
+  api-mongo-1:
+    ip: '10.2.4.21'
+  api-mongo-2:
+    ip: '10.2.4.22'
+  api-mongo-3:
+    ip: '10.2.4.23'
+  api-mongo-4:
+    ip: '10.2.12.21'
+  api-redis-1:
+    ip: '10.2.4.29'
+  content-store-1:
+    ip: '10.2.4.11'
+  content-store-2:
+    ip: '10.2.4.12'
+  content-store-3:
+    ip: '10.2.4.13'
+  draft-content-store-1:
+    ip: '10.2.4.200'
+  draft-content-store-2:
+    ip: '10.2.4.201'
+  mapit-1:
+    ip: '10.2.4.60'
+  mapit-2:
+    ip: '10.2.4.61'
+  performance-mongo-1:
+    ip: '10.2.4.31'
+  performance-mongo-2:
+    ip: '10.2.4.32'
+  performance-mongo-3:
+    ip: '10.2.4.33'
+  performance-mongo-4:
+    ip: '10.2.12.31'
+  rummager-elasticsearch-1:
+    ip: '10.2.4.55'
+  rummager-elasticsearch-2:
+    ip: '10.2.4.56'
+  rummager-elasticsearch-3:
+    ip: '10.2.4.57'
+  search-1:
+    ip: '10.2.4.4'
+  search-2:
+    ip: '10.2.4.5'
+  search-3:
+    ip: '10.2.4.6'
+
+hosts::aws_production::backend::hosts:
+  asset-master-1:
+    ip: '10.2.3.20'
+    legacy_aliases:
+      - 'asset-master-1.staging.publishing.service.gov.uk'
+      - 'asset-master'
+      - 'asset-master.staging.publishing.service.gov.uk'
+  asset-slave-1:
+    ip: '10.2.3.21'
+    legacy_aliases:
+      - 'asset-slave-1.staging.publishing.service.gov.uk'
+      - 'asset-slave'
+      - 'asset-slave.staging.publishing.service.gov.uk'
+  asset-slave-2:
+    ip: '10.2.11.21'
+  ckan-1:
+    ip: '10.2.3.120'
+  docker-backend-1:
+    ip: '10.2.3.111'
+  docker-backend-2:
+    ip: '10.2.3.112'
+  elasticsearch-1:
+    ip: '10.2.3.15'
+  elasticsearch-2:
+    ip: '10.2.3.16'
+  elasticsearch-3:
+    ip: '10.2.3.17'
+  email-alert-api-1:
+    ip: '10.2.3.40'
+  email-alert-api-2:
+    ip: '10.2.3.41'
+  email-alert-api-3:
+    ip: '10.2.3.42'
+  publishing-api-1:
+    ip: '10.2.3.45'
+  publishing-api-2:
+    ip: '10.2.3.46'
+  publishing-api-3:
+    ip: '10.2.3.47'
+  rabbitmq-1:
+    ip: '10.2.3.70'
+  rabbitmq-2:
+    ip: '10.2.3.71'
+  rabbitmq-3:
+    ip: '10.2.3.72'
+  whitehall-backend-1:
+    ip: '10.2.3.25'
+  whitehall-backend-2:
+    ip: '10.2.3.26'
+  whitehall-backend-3:
+    ip: '10.2.3.27'
+  whitehall-backend-4:
+    ip: '10.2.3.28'
+
+hosts::aws_production::backend::app_hostnames:
+  - 'asset-manager'
+  - 'canary-backend'
+  - 'ckan'
+  - 'collections-publisher'
+  - 'contacts-admin'
+  - 'content-audit-tool'
+  - 'content-data-admin'
+  - 'content-performance-manager'
+  - 'content-publisher'
+  - 'content-tagger'
+  - 'docs'
+  - 'email-alert-api'
+  - 'email-alert-api-public'
+  - 'event-store'
+  - 'hmrc-manuals-api'
+  - 'kibana'
+  - 'maslow'
+  - 'manuals-publisher'
+  - 'publisher'
+  - 'publishing-api'
+  - 'search-admin'
+  - 'service-manual-publisher'
+  - 'short-url-manager'
+  - 'signon'
+  - 'specialist-publisher'
+  - 'specialist-publisher-rebuild'
+  - 'specialist-publisher-rebuild-standalone'
+  - 'support'
+  - 'support-api'
+  - 'travel-advice-publisher'
+  - 'whitehall-admin'
+
+
+hosts::aws_production::frontend::hosts:
+  calculators-frontend-1:
+    ip: '10.2.2.11'
+  calculators-frontend-2:
+    ip: '10.2.2.12'
+  calculators-frontend-3:
+    ip: '10.2.2.13'
+  frontend-1:
+    ip: '10.2.2.2'
+  frontend-2:
+    ip: '10.2.2.3'
+  frontend-3:
+    ip: '10.2.2.4'
+  draft-frontend-1:
+    ip: '10.2.2.200'
+  draft-frontend-2:
+    ip: '10.2.2.201'
+  whitehall-frontend-1:
+    ip: '10.2.2.5'
+  whitehall-frontend-2:
+    ip: '10.2.2.6'
+  whitehall-frontend-3:
+    ip: '10.2.2.10'
+  frontend-lb-1:
+    ip: '10.2.2.101'
+  frontend-lb-2:
+    ip: '10.2.2.102'
+
+hosts::aws_production::management::hosts:
+  backup-1:
+    ip: '10.2.0.50'
+  apt-1:
+    ip: '10.2.0.75'
+    service_aliases:
+      - 'apt'
+      - 'gemstash'
+  docker-management-1:
+    ip: '10.2.0.80'
+    service_aliases:
+      - 'etcd'
+  mirrorer-1:
+    ip: '10.2.0.128'
+
+hosts::aws_production::router::hosts:
+  cache-1:
+    ip: '10.2.1.2'
+  cache-2:
+    ip: '10.2.1.3'
+  cache-3:
+    ip: '10.2.1.4'
+  draft-cache-1:
+    ip: '10.2.1.200'
+  draft-cache-2:
+    ip: '10.2.1.201'
+  router-backend-1:
+    ip: '10.2.1.10'
+  router-backend-2:
+    ip: '10.2.1.11'
+  router-backend-3:
+    ip: '10.2.1.12'
+  router-backend-4:
+    ip: '10.2.9.10'
+  cache:
+    ip: '10.2.1.254'
+    legacy_aliases:
+      - 'cache'
+      - "www.%{hiera('hosts::aws_production::app_domain')}"
+      - "www-origin.%{hiera('hosts::aws_production::app_domain')}"
+      - "assets-origin.%{hiera('hosts::aws_production::app_domain')}"
+    service_aliases:
+      - 'cache'
+      - 'router'
+  router-backend-internal-lb:
+    ip: '10.2.1.253'
+    legacy_aliases:
+      - "router-api.%{hiera('hosts::aws_production::app_domain')}"
+  draft-cache-internal-lb:
+    ip: '10.2.1.252'
+    legacy_aliases:
+      - "draft-router-api.%{hiera('hosts::aws_production::app_domain')}"
+      - "draft-publicapi.%{hiera('hosts::aws_production::app_domain')}"
