--- a/hieradata/class/production/jenkins.yaml
+++ b/hieradata/class/production/jenkins.yaml
@@ -66,5 +66,6 @@ govuk_jenkins::job_builder::jobs:
 
 govuk_jenkins::jobs::deploy_cdn::enable_slack_notifications: true
 govuk_jenkins::jobs::deploy_puppet::enable_slack_notifications: true
+govuk_jenkins::jobs::scrape_icinga_alerts_for_dashboard_metrics::run_monthly: true
 govuk_jenkins::jobs::smokey::enable_slack_notifications: true
 govuk_jenkins::jobs::validate_published_dns::run_daily: true
