--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -19,6 +19,7 @@ node_class: &node_class
     apps:
       - transition
       - imminence
+      - link-checker-api
       - local-links-manager
   bouncer:
     apps:
