--- a/hieradata/node/postgresql-standby-2.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/postgresql-standby-2.backend.publishing.service.gov.uk.yaml
@@ -16,3 +16,14 @@ govuk_env_sync::tasks:
     temppath: "/var/lib/autopostgresqlbackup/local-links-manager_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_link-checker-api_production_daily":
+    ensure: "absent"
+    hour: "3"
+    minute: "0"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "link-checker-api_production"
+    temppath: "/tmp/"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
