--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -21,3 +21,25 @@ govuk_env_sync::tasks:
     temppath: "/tmp/local-links-manager_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_link-checker-api_production_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "0"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "link-checker-api_production"
+    temppath: "/tmp/link-checker-api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_link-checker-api_production_daily":
+    ensure: "absent"
+    hour: "0"
+    minute: "0"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "link-checker-api_production"
+    temppath: "/tmp/link-checker-api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
