Trello-1731-1774 - push/pull for api-mongo migr
This gets the push / pull mongo sync scripts and cron jobs in place for
the draft-content-store and the content-store miration to AWS.

The draft-content-store and the content-store both reside on a mongo
cluster called api-mongo in carrenza. As part of the migration both
these databases will move to an existing cluster in AWS and sit
alongside other mongo databases, that clustser's nodes are named mongo.

- the existing push cron jobs are being removed from api-mongo-4 in
  carrenza but the scripts and configfile for the syncs will now reside
  on all api-mongo nodes in carrenza.
- the pull scripts and config files will be laid down on the AWS side
  but will not have cronjobs associated with them
- the push scripts will be scheduled via cron on the AWS side

staging and production environments will have their push and pull
scripts setup in a similar manner.

Solo: @ronocg <conor.glynn@digital.cabinet-office.gov.uk>

--- a/hieradata_aws/class/staging/mongo.yaml
+++ b/hieradata_aws/class/staging/mongo.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "pull_content_store_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "1" 
     minute: "16"
     action: "pull"
@@ -11,10 +11,32 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "mongo-api"
   "pull_draft_content_store_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2" 
     minute: "16"
     action: "pull"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "draft_content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-staging-database-backups"
+    path: "mongo-api"
+  "push_content_store_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "12"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-staging-database-backups"
+    path: "mongo-api"
+  "push_draft_content_store_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "12"
+    action: "push"
     dbms: "mongo"
     storagebackend: "s3"
     database: "draft_content_store_production"
