--- a/hieradata_aws/class/production/mongo.yaml
+++ b/hieradata_aws/class/production/mongo.yaml
@@ -21,3 +21,47 @@ govuk_env_sync::tasks:
     temppath: "/var/lib/mongodb/.dumps"
     url: "govuk-production-database-backups"
     path: "mongo-normal"
+  "pull_content_store_daily":
+    ensure: "absent"
+    hour: "1"
+    minute: "16"
+    action: "pull"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-api"
+  "pull_draft_content_store_daily":
+    ensure: "absent"
+    hour: "2"
+    minute: "16"
+    action: "pull"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "draft_content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-api"
+  "push_content_store_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "16"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-api"
+  "push_draft_content_store_daily":
+    ensure: "present"
+    hour: "1"
+    minute: "16"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "draft_content_store_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-api"
