Adds new developer Jonathan Kerr
I'm new to GOV.UK, and I'm setting myself up following the guide.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -242,6 +242,7 @@ users::usernames:
   - fredericfrancois
   - isabelllong
   - jessicajones
+  - jonathankerr
   - joskoetsier
   - julianstandring
   - karlbaker
