Add username and public key for katherinestevens

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -245,6 +245,7 @@ users::usernames:
   - joskoetsier
   - julianstandring
   - karlbaker
+  - katherinestevens
   - kelvingan
   - kevindew
   - kevingarwood
