--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -184,6 +184,7 @@ users::usernames:
   - joskoetsier
   - julianstandring
   - karlbaker
+  - katherinestevens
   - kelvingan
   - kevindew
   - kevingarwood
