Trello-1731: Gor Replay ste header
The content-store application only supports the "Forwarded:" header
therefore the "X-Forwarded-Host:" header can be changed for the content
store.
NOTE: defaulting to the "X-Forwarded-Host:" header as the cache router
that also uses the gor replay class needs to support this.

Pair: @ronocg <conor.glynn@digital.cabinet-office.gov.uk>
& @fredericfran-gds <frederic.francois@digital.cabinet-office.gov.uk>

--- a/hieradata/class/staging/content_store.yaml
+++ b/hieradata/class/staging/content_store.yaml
@@ -5,5 +5,6 @@ nscd::config::dns_cache: 'yes'
 router::gor::add_hosts: false
 router::gor::replay_targets:
   'content-store.staging.govuk.digital': {}
+router::gor::http_set_header: 'Forwarded:'
 
 router::gor::input_raw: ':3068'
