Migr-plan: etc hosts for content-stode migration
Here we are removing the /etc/hosts entries for the content-store and
teh draft-content-store in Carrenza Staging. This is part of the
migration plan, so the publishing-api and the frontends in carrenza
staging will begin communicating with the content-store and
draft-content-store in aws.

also removing a swp file that was committed at some stage.

Pair: @th31nitiate <david.jeche@digital.cabinet-office.gov.uk>
& @ronocg <conor.glynn@digital.cabinet-office.gov.uk>

--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -382,6 +382,14 @@ hosts::production::backend::hosts:
   whitehall-mysql-slave-3:
     ip: '10.2.11.31'
 
+hosts::production::api::app_hostnames:
+  - 'backdrop-read'
+  - 'backdrop-write'
+  - 'rummager'
+  - 'search'
+
+hosts::production::api::draft_app_hostnames:
+
 hosts::production::backend::app_hostnames:
   - 'asset-manager'
   - 'canary-backend'
