Prod-Migr-plan: etc hosts for content-stode migr
Here we are removing the /etc/hosts entries for the content-store and
teh draft-content-store in Carrenza Production. This is part of the
migration plan, so the publishing-api and the frontends in carrenza
production will begin communicating with the content-store and
draft-content-store in aws by resolving via DNS.

Pair: @th31nitiate david.jeche@digital.cabinet-office.gov.uk
& @ronocg conor.glynn@digital.cabinet-office.gov.uk

--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -288,6 +288,14 @@ hosts::production::api::hosts:
   search-3:
     ip: '10.3.4.6'
 
+hosts::production::api::app_hostnames:
+  - 'backdrop-read'
+  - 'backdrop-write'
+  - 'rummager'
+  - 'search'
+
+hosts::production::api::draft_app_hostnames:
+
 hosts::production::backend::app_hostnames:
   - 'asset-manager'
   - 'canary-backend'
