--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -264,6 +264,7 @@ users::usernames:
   - peterhartshorn
   - philippotter
   - rochtrinque
+  - rosafox
   - rubenarakelyan
   - seanrankine
   - sebastianschmieschek
