--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -203,6 +203,7 @@ users::usernames:
   - peterhartshorn
   - philippotter
   - rochtrinque
+  - rosafox
   - rubenarakelyan
   - seanrankine
   - sebastianschmieschek
