put the data sync configs in Carrenza and AWS

--- a/hieradata/node/postgresql-standby-2.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/postgresql-standby-2.backend.publishing.service.gov.uk.yaml
@@ -27,3 +27,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_support-contacts_production_daily":
+    ensure: "absent"
+    hour: "3"
+    minute: "0"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
