--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -43,3 +43,25 @@ govuk_env_sync::tasks:
     temppath: "/tmp/link-checker-api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_support-contacts_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_support-contacts_production_daily":
+    ensure: "absent"
+    hour: "3"
+    minute: "0"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "support_contacts_production"
+    temppath: "/tmp/"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
