add jonathan hallam

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -242,6 +242,7 @@ users::usernames:
   - fredericfrancois
   - isabelllong
   - jessicajones
+  - jonathanhallam
   - jonathankerr
   - joskoetsier
   - julianstandring
