--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -181,6 +181,7 @@ users::usernames:
   - fredericfrancois
   - isabelllong
   - jessicajones
+  - jonathanhallam
   - jonathankerr
   - joskoetsier
   - julianstandring
