Add Aditya Pahuja
- He needs access as part of the GOV.UK dynamic content team

solo: @schmie

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -156,6 +156,7 @@ router::nginx::check_requests_warning: '@0.5'
 router::nginx::check_requests_critical: '@0.25'
 
 users::usernames:
+  - adityapahuja
   - alangabbianelli
   - alexandrujurubita
   - alextorrance
