Load in draft oauth id/secret for Content Store
There doesn't seem to be much of a precedent set for when apps need
different secrets in draft and live environments. I'm hoping that a
prefix in the draft secrets file can be used and then override the main
secret via this file.

--- a/hieradata_aws/class/draft_content_store.yaml
+++ b/hieradata_aws/class/draft_content_store.yaml
@@ -6,4 +6,6 @@ govuk::apps::content_store::mongodb_nodes:
   - 'mongo-1'
   - 'mongo-2'
   - 'mongo-3'
+govuk::apps::content_store::oauth_id: "%{hiera('govuk::apps::content_store::draft_oauth_id')}"
+govuk::apps::content_store::oauth_secret: "%{hiera('govuk::apps::content_store::draft_oauth_secret')}"
 govuk::apps::content_store::vhost: 'draft-content-store'
