--- a/hieradata/class/draft_content_store.yaml
+++ b/hieradata/class/draft_content_store.yaml
@@ -6,6 +6,9 @@ govuk::apps::content_store::mongodb_nodes:
   - 'api-mongo-1.api'
   - 'api-mongo-2.api'
   - 'api-mongo-3.api'
+
+govuk::apps::content_store::oauth_id: "%{hiera('govuk::apps::content_store::draft_oauth_id')}"
+govuk::apps::content_store::oauth_secret: "%{hiera('govuk::apps::content_store::draft_oauth_secret')}"
 govuk::apps::content_store::vhost: 'draft-content-store'
 
 lv:
