use client side alert for icinga ping check

--- a/hieradata_aws/class/staging/backend.yaml
+++ b/hieradata_aws/class/staging/backend.yaml
@@ -1,5 +1,5 @@
 ---
 
- monitoring::vpn_gateways::endpoints:
+icinga::client::check_pings:
    whitehall-admin:
-     address: 10.2.3.254
+     ip: 10.2.3.254
