--- a/hieradata_aws/class/staging/backend.yaml
+++ b/hieradata_aws/class/staging/backend.yaml
@@ -5,3 +5,5 @@ icinga::client::check_pings::endpoints:
      ip: 10.2.3.254
    content-performance-manager:
      ip: 10.2.3.254
+   backdrop-lb:
+     ip: 10.2.4.254
