--- a/hieradata_aws/class/production/draft_content_store.yaml
+++ b/hieradata_aws/class/production/draft_content_store.yaml
@@ -3,3 +3,5 @@
 icinga::client::check_pings::endpoints:
    draft-router-api:
      ip: 10.3.1.252
+
+icinga::client::contact_groups: 'urgent-priority'
