Increase number of unicorn workers for Static
- Response to outcome of load test in which frontend had some difficulty talking to static, resulting in 500s

Co-authored-by: Jonathan Kerr <jonathan.kerr@digital.cabinet-office.gov.uk>

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -709,6 +709,7 @@ govuk::apps::smokey::rate_limit_token: "%{hiera('smokey_rate_limit_token')}"
 
 govuk::apps::static::redis_host: "%{hiera('sidekiq_host')}"
 govuk::apps::static::redis_port: "%{hiera('sidekiq_port')}"
+govuk::apps::static::unicorn_worker_processes: "8"
 
 govuk::apps::support::redis_host: "%{hiera('sidekiq_host')}"
 govuk::apps::support::redis_port: "%{hiera('sidekiq_port')}"
