Load common_credentials hieradata
This is a new hieradata file that contains secrets shared between
integration, staging and production.

They're created in https://github.com/alphagov/govuk-secrets/pull/523.

--- a/hiera_aws.yml
+++ b/hiera_aws.yml
@@ -8,6 +8,7 @@
   - '%{::environment}_credentials'
   - '%{::environment}'
   - 'common.%{::lsbdistcodename}'
+  - 'common_credentials'
   - 'common'
 :backends:
   - eyaml
