--- a/hiera.yml
+++ b/hiera.yml
@@ -7,6 +7,7 @@
   - '%{::environment}_credentials'
   - '%{::environment}'
   - 'common.%{::lsbdistcodename}'
+  - 'common_credentials'
   - 'common'
 :backends:
   - eyaml
