--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -434,8 +434,9 @@ govuk::apps::content_publisher::db::rds: true
 govuk::apps::content_publisher::jwt_auth_secret: "%{hiera('jwt_auth_secret')}"
 govuk::apps::content_publisher::aws_region: "eu-west-1"
 
-govuk::apps::content_store::nagios_memory_warning: 2300
-govuk::apps::content_store::nagios_memory_critical: 2500
+govuk::apps::content_store::nagios_memory_warning: 2600
+govuk::apps::content_store::nagios_memory_critical: 2800
+govuk::apps::content_store::unicorn_worker_processes: "8"
 
 govuk::apps::content_tagger::db_hostname: "db-admin"
 govuk::apps::content_tagger::db_port: 6432
@@ -619,6 +620,7 @@ govuk::apps::rummager::rabbitmq_user: 'rummager-v2'
 govuk::apps::rummager::redis_host: 'backend-redis'
 govuk::apps::rummager::redis_port: '6379'
 govuk::apps::rummager::elasticsearch_hosts: 'http://rummager-elasticsearch:9200'
+govuk::apps::rummager::unicorn_worker_processes: "6"
 
 govuk::apps::search_admin::db_name: 'search_admin_production'
 govuk::apps::search_admin::db_hostname: 'mysql-primary'
