Add app for support-api CSV sync
This commit adds a new “app” which sets the environment up for the support-api CSV sync. This sync job (in `env-sync-and-backup`) will sync the production S3 bucket that holds CSV exports from support-api with the equivalent buckets in staging and integration.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -45,6 +45,7 @@ node_class: &node_class
       - specialist-publisher
       - support
       - support-api
+      - support_api_csv_env_sync
       - travel-advice-publisher
   bouncer:
     apps:
