--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -43,6 +43,7 @@ node_class: &node_class
       - specialist-publisher
       - support
       - support-api
+      - support_api_csv_env_sync
       - transition
       - travel-advice-publisher
   bouncer:
