--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -25,6 +25,7 @@ node_class: &node_class
       - local-links-manager
       - support
       - support-api
+      - support_api_csv_env_sync
   bouncer:
     apps:
       - bouncer
