--- a/hieradata/class/transition_postgresql_primary.yaml
+++ b/hieradata/class/transition_postgresql_primary.yaml
@@ -15,6 +15,8 @@ mount:
     govuk_lvm: 'data'
     mountoptions: 'defaults'
 
+govuk_postgresql::server::primary::backup_enable: false
+
 govuk_postgresql::server::primary::slave_addresses:
   live:
     address: "%{hiera('postgresql_transition_standby_addresses_live')}"
