--- a/hieradata/class/transition_postgresql_master.yaml
+++ b/hieradata/class/transition_postgresql_master.yaml
@@ -14,7 +14,7 @@ mount:
     govuk_lvm: 'data'
     mountoptions: 'defaults'
 
-govuk_postgresql::server::primary::backup_enable: false
+govuk_postgresql::backup::ensure: 'absent'
 
 govuk_postgresql::server::primary::slave_addresses:
   live:
