--- a/hieradata/class/transition_postgresql_primary.yaml
+++ b/hieradata/class/transition_postgresql_primary.yaml
@@ -1,5 +1,5 @@
 ---
-backup::client: 'absent'
+backup::client::ensure: 'absent'
 postgresql::globals::version: '9.5'
 
 govuk_safe_to_reboot::can_reboot: 'no'
