--- a/hieradata/class/transition_postgresql_primary.yaml
+++ b/hieradata/class/transition_postgresql_primary.yaml
@@ -1,4 +1,5 @@
 ---
+backup::client::ensure: 'absent'
 postgresql::globals::version: '9.5'
 
 govuk_safe_to_reboot::can_reboot: 'no'
@@ -14,6 +15,8 @@ mount:
     disk: '/dev/mapper/postgresql-data'
     govuk_lvm: 'data'
     mountoptions: 'defaults'
+
+govuk_postgresql::backup::ensure: 'absent'
 
 govuk_postgresql::server::primary::slave_addresses:
   live:
