Adds names to integration YAML files.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -241,6 +241,7 @@ users::usernames:
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
+  - ianjames
   - isabelllong
   - jessicajones
   - jonathanhallam
