--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -182,6 +182,7 @@ users::usernames:
   - erinrajstaniland
   - felisialoukou
   - fredericfrancois
+  - ianjames
   - isabelllong
   - jessicajones
   - jonathanhallam
