--- a/hiera.yml
+++ b/hiera.yml
@@ -4,6 +4,7 @@
   - 'node/%{::fqdn}'
   - 'class/%{::environment}/%{::govuk_node_class}'
   - 'class/%{::govuk_node_class}'
+  - 'apps/%{::environment}_credentials'
   - '%{::environment}_credentials'
   - '%{::environment}'
   - 'common.%{::lsbdistcodename}'
