--- a/hiera_aws.yml
+++ b/hiera_aws.yml
@@ -5,6 +5,7 @@
   - 'class/%{::environment}/%{::govuk_node_class}'
   - 'class/%{::govuk_node_class}'
   - '%{::aws_stackname}/%{::environment}_credentials'
+  - 'apps/%{::environment}_credentials'
   - '%{::environment}_credentials'
   - '%{::environment}'
   - 'common.%{::lsbdistcodename}'
