Change deployment dashboards to application dashboards
The intent here is to open up the "deployment" dashboards to be more
useful, by instead viewing them as more general application
dashboards.

I think they can still meet the "deployment" need well by default,
while also not being limited, and being useful to look at an
application more generally. For example, using them in Integration
when testing changes, or looking at patterns over the last few weeks
or months.

These changes mostly just change the names, but the first functional
changes probably should be to remove the overridden time ranges off
specific panels, making the dashboard more flexible.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -966,7 +966,7 @@ govuk_unattended_reboot::monitoring_basic_auth:
 grafana::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 grafana::dashboards::app_domain: "%{hiera('app_domain')}"
 grafana::dashboards::machine_suffix_metrics: ''
-grafana::dashboards::deployment_applications:
+grafana::dashboards::application_dashboards:
   asset-manager:
     show_sidekiq_graphs: true
     has_workers: true
