Add Dilwoar Hussain
Accidentally removed.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -233,6 +233,7 @@ users::usernames:
   - conorglynn
   - deanwilson
   - deborahchua
+  - dilwoarhussain
   - edwardkerry
   - elliotcm
   - emmabeynon
