--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -172,6 +172,7 @@ users::usernames:
   - conorglynn
   - deanwilson
   - deborahchua
+  - dilwoarhussain
   - edwardkerry
   - elliotcm
   - emmabeynon
