Add user: sebastianszypowicz

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -262,6 +262,7 @@ users::usernames:
   - rubenarakelyan
   - seanrankine
   - sebastianschmieschek
+  - sebastianszypowicz
   - simonhughesdon
   - stephengrier
   - stephenharker
