--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -199,6 +199,7 @@ users::usernames:
   - rubenarakelyan
   - seanrankine
   - sebastianschmieschek
+  - sebastianszypowicz
   - simonhughesdon
   - stephengrier
   - stephenharker
