Fix data sync for staging environment sync in AWS
- There was a typo causing to restore the staging backup data set rather
than the production data set nightly in staging

- Also disabled a number of sync tasks currently without meaning
(non-migrated databases)

solo: @schmie

--- a/hieradata_aws/class/staging/mongo.yaml
+++ b/hieradata_aws/class/staging/mongo.yaml
@@ -8,7 +8,7 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "content_store_production"
     temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-staging-database-backups"
+    url: "govuk-production-database-backups"
     path: "mongo-api"
   "pull_draft_content_store_daily":
     ensure: "present"
@@ -19,7 +19,7 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "draft_content_store_production"
     temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-staging-database-backups"
+    url: "govuk-production-database-backups"
     path: "mongo-api"
   "push_content_store_daily":
     ensure: "present"
@@ -52,10 +52,10 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "licence_finder_production"
     temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-staging-database-backups"
+    url: "govuk-production-database-backups"
     path: "mongo-normal"
   "pull_maslow_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "21"
     action: "pull"
@@ -63,10 +63,10 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "maslow_production"
     temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-staging-database-backups"
+    url: "govuk-production-database-backups"
     path: "mongo-normal"
   "pull_publisher_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "21"
     action: "pull"
@@ -77,7 +77,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "mongo-normal"
   "pull_short_url_manager_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "21"
     action: "pull"
@@ -88,7 +88,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "mongo-normal"
   "pull_travel_advice_publisher_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "21"
     action: "pull"
@@ -99,7 +99,7 @@ govuk_env_sync::tasks:
     url: "govuk-staging-database-backups"
     path: "mongo-normal"
   "pull_govuk_assets_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "41"
     action: "pull"
@@ -107,10 +107,10 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "govuk_assets_production"
     temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-staging-database-backups"
+    url: "govuk-production-database-backups"
     path: "mongo-normal"
   "pull_govuk_content_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "51"
     action: "pull"
@@ -129,5 +129,5 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "imminence_production"
     temppath: "/var/lib/mongodb/.dumps"
-    url: "govuk-staging-database-backups"
+    url: "govuk-production-database-backups"
     path: "mongo-normal"
