Trello-1921: nginx loadbalancer config
As part of the migration of the frontends to aws, there needs to be a
way for the aws finder-frontend to access the search-api (search-1/2/3
VMs) in carrenza. While in carrenza this was accessed using an
internal-lb via a hosts entry but aws will dns resolve
search.publishing.service.gov.uk which will be cnamed into the
backend-lb.

Therefore the backend-lb will require the nginx configuration for search
which is being laid down by this PR.

ALso limiting the nginx for search to only allow from the 3 nat gateway
egress ips from the corresponding AWS environment.

@ronocg <conor.glynn@digital.cabinet-office.gov.uk>

--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -152,6 +152,10 @@ govuk::node::s_api_lb::search_servers:
   - "search-3.api"
 
 govuk::node::s_apt::real_ip_header: 'True-Client-Ip'
+govuk::node::s_backend_lb::aws_egress_nat_ips:
+  - '34.246.209.74'
+  - '34.253.57.8'
+  - '18.202.136.43'
 govuk::node::s_backend_lb::backend_servers:
   - 'backend-1.backend'
   - 'backend-2.backend'
@@ -166,6 +170,10 @@ govuk::node::s_backend_lb::publishing_api_backend_servers:
   - 'publishing-api-1.backend'
   - 'publishing-api-2.backend'
   - 'publishing-api-3.backend'
+govuk::node::s_backend_lb::search_servers:
+  - "search-1.api"
+  - "search-2.api"
+  - "search-3.api"
 govuk::node::s_backend_lb::whitehall_backend_servers:
   - 'whitehall-backend-1.backend'
   - 'whitehall-backend-2.backend'
