Enable GTM for Content Data in VM
We have Google Tag Manager enabled for Integration, Staging and
Production but not in local development which makes it hard to
work on. There is no real reason not to enable it.

--- a/hieradata/development_credentials.yaml
+++ b/hieradata/development_credentials.yaml
@@ -216,6 +216,9 @@ govuk::apps::collections_publisher::publishing_api_bearer_token: 'oauth-bearer-t
 govuk::apps::contacts::oauth_id: 'oauth-contacts-admin'
 govuk::apps::contacts::oauth_secret: 'secret'
 govuk::apps::contacts::publishing_api_bearer_token: 'oauth-bearer-token-publishing-api'
+govuk::apps::content_data_admin::google_tag_manager_auth: 'LVIvCM48lIVCNXHwo-JaaQ'
+govuk::apps::content_data_admin::google_tag_manager_preview: 'env-62'
+govuk::apps::content_data_admin::google_tag_manager_id: 'GTM-NZG8SF2'
 govuk::apps::content_publisher::asset_manager_bearer_token: 'oauth-bearer-token-asset-manager'
 govuk::apps::content_publisher::publishing_api_bearer_token: 'oauth-bearer-token-publishing-api'
 govuk::apps::content_tagger::oauth_id: 'oauth-content-tagger'
