add richard morton

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -257,6 +257,7 @@ users::usernames:
   - pablomanrubia
   - petergoddard
   - peterhartshorn
+  - richardmorton
   - rochtrinque
   - rubenarakelyan
   - seanrankine
