--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -200,6 +200,7 @@ users::usernames:
   - pablomanrubia
   - petergoddard
   - peterhartshorn
+  - richardmorton
   - rochtrinque
   - rubenarakelyan
   - seanrankine
