Add Ken Tsang to manifest and integration.yaml

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -246,6 +246,7 @@ users::usernames:
   - julianstandring
   - karlbaker
   - kelvingan
+  - kentsang
   - kevindew
   - kevingarwood
   - leenagupte
