--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -189,6 +189,7 @@ users::usernames:
   - julianstandring
   - karlbaker
   - kelvingan
+  - kentsang
   - kevindew
   - kevingarwood
   - leenagupte
