Push staging backup to S3

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -7,8 +7,19 @@ govuk_env_sync::tasks:
     dbms: "postgresql"
     storagebackend: "s3"
     database: "ckan_production"
-    temppath: "/tmp/ckan_production"
+    temppath: "/tmp/ckan_production_pull"
     url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_ckan_staging_daily":
+    ensure: "present"
+    hour: "3"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "ckan_production"
+    temppath: "/tmp/ckan_production_push"
+    url: "govuk-staging-database-backups"
     path: "postgresql-backend"
   "pull_content_audit_tool_production_daily":
     ensure: "present"
