Add new metrics row to the finder frontend grafana

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1139,7 +1139,8 @@ grafana::dashboards::application_dashboards:
     has_workers: true
   email-alert-frontend: {}
   feedback: {}
-  finder-frontend: {}
+  finder-frontend:
+    show_external_request_time: true
   frontend: {}
   government-frontend: {}
   hmrc-manuals-api: {}
