Add some missing hieradata for the Content Data API
Mostly copied from the Content Performance Manager hieradata, and
tweaked for AWS.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -418,6 +418,17 @@ govuk::apps::content_data_admin::db::allow_auth_from_lb: true
 govuk::apps::content_data_admin::db::lb_ip_range: "%{hiera('environment_ip_prefix')}.0.0/16"
 govuk::apps::content_data_admin::db::rds: true
 
+govuk::apps::content_data_api::rabbitmq_user: "content_data_api"
+govuk::apps::content_data_api::rabbitmq_password: "%{hiera('govuk::apps::content_data_api::rabbitmq::amqp_pass')}"
+govuk::apps::content_data_api::db_hostname: "content-data-api-postgresql-primary"
+govuk::apps::content_data_api::db::backend_ip_range: "%{hiera('environment_ip_prefix')}.3.0/24"
+govuk::apps::content_data_api::db::allow_auth_from_lb: true
+govuk::apps::content_data_api::db::lb_ip_range: "%{hiera('environment_ip_prefix')}.0.0/16"
+govuk::apps::content_data_api::rabbitmq_hosts:
+  - rabbitmq
+govuk::apps::content_data_api::redis_host: "%{hiera('sidekiq_host')}"
+govuk::apps::content_data_api::redis_port: "%{hiera('sidekiq_port')}"
+
 govuk::apps::content_performance_manager::rabbitmq_user: "content_performance_manager"
 govuk::apps::content_performance_manager::rabbitmq_password: "%{hiera('govuk::apps::content_performance_manager::rabbitmq::amqp_pass')}"
 govuk::apps::content_performance_manager::db_hostname: "warehouse-postgresql-primary"
@@ -770,6 +781,7 @@ govuk_awscli::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 govuk_aws_xray_daemon::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk::apps::content_audit_tool::db::rds: true
+govuk::apps::content_data_api::db::rds: true
 govuk::apps::content_performance_manager::db::rds: true
 govuk::apps::content_tagger::db::rds: true
 govuk::apps::email_alert_api::db::rds: true
