--- a/hieradata_aws/class/rabbitmq.yaml
+++ b/hieradata_aws/class/rabbitmq.yaml
@@ -5,6 +5,7 @@ govuk::node::s_rabbitmq::apps_using_rabbitmq:
   - email_alert_service
   - publishing_api
   - rummager
+  - content-data-api
   - content_performance_manager
   - cache_clearing_service
   - search_api
