lay the database sync script for licence finder production

--- a/hieradata/node/mongo-4.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/mongo-4.backend.publishing.service.gov.uk.yaml
@@ -12,3 +12,14 @@ govuk_env_sync::tasks:
     temppath: "/var/lib/mongodb/.dumps"
     url: "govuk-production-database-backups"
     path: "mongo-normal"
+  "push_licence_finder_production":
+    ensure: "absent"
+    hour: "1"
+    minute: "21"
+    action: "push"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "licence_finder_production"
+    temppath: "/var/lib/s3backup/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
