--- a/hieradata_aws/class/production/mongo.yaml
+++ b/hieradata_aws/class/production/mongo.yaml
@@ -65,3 +65,14 @@ govuk_env_sync::tasks:
     temppath: "/var/lib/mongodb/.dumps"
     url: "govuk-production-database-backups"
     path: "mongo-api"
+  "pull_licence_finder_production":
+    ensure: "absent"
+    hour: "2"
+    minute: "21"
+    action: "pull"
+    dbms: "mongo"
+    storagebackend: "s3"
+    database: "licence_finder_production"
+    temppath: "/var/lib/mongodb/.dumps"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
